# anka-os

./: .gitattributes  .gitignore  Makefile  README.md  VERSION  cliff.toml  flake.nix
.github/workflows/: build-iso.yml  test.yml
docs/: branding.md  update-system.md
hosts/default/: configuration.nix  home.nix
iso/: default.nix
iso/calamares/: settings.conf
iso/calamares/branding/anka/: branding.desc
iso/calamares/modules/: partition.conf  users.conf  welcome.conf
modules/accessibility/: default.nix
modules/adobe/: default.nix
modules/ai/: default.nix  mcp.nix
modules/apps/: default.nix
modules/compat/: media.nix  windows.nix
modules/desktop/: default.nix
modules/firstrun/: default.nix
modules/gaming/: default.nix
modules/gpu/: default.nix
modules/installer/: default.nix  first-run-wizard.sh
modules/performance/: default.nix  gaming.nix
modules/system/: boot.nix  filesystem.nix  kernel.nix  network.nix  plymouth.nix  security.nix
modules/update/: anka-rebuild.sh  default.nix  kde-notifier.py  version.nix
modules/update/kcm/: CMakeLists.txt  default.nix  kcm_anka_update.cpp  kcm_anka_update.json  kcm_kiwimi_update.cpp  kcm_kiwimi_update.json
modules/update/kcm/package/contents/ui/: main.qml
scripts/: anka-rebuild.sh  build-iso.sh
services/anka-ai/: daemon.py  dbus_bridge.py
services/anka-ai/anka-ai/: README.md  confirmation_gate.py  daemon.py  dbus_bridge.py  intent.py  memory.py  pyproject.toml  requirements.txt  router.py  voice_pipeline.py
services/anka-ai/anka-ai/mcp-servers/: mcp_audio.py  mcp_desktop.py  mcp_diagnostics.py  mcp_filesystem.py  mcp_network.py  mcp_package.py  mcp_process.py  mcp_system.py
wiki/_agent/: hot.md
wiki/wiki/: anka-os-overview.md
