[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anka-ai"
version = "0.3.0"
description = "ANKA OS AI orchestration daemon and MCP server suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ANKA OS Contributors" }]

dependencies = [
    # AI / LLM
    "anthropic>=0.45.0",
    "litellm>=1.50.0",

    # MCP server framework
    "fastmcp>=2.0.0",

    # D-Bus
    "dasbus>=1.6.0",
    "dbus-python>=1.3.2",

    # Voice / STT / TTS
    "faster-whisper>=1.1.0",
    "pyaudio>=0.2.14",

    # System utilities
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
anka-ai-daemon = "daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"